testsuite/poke.pkl/struct-types-diag-14.pk
/* { dg-do compile } */

type Foo = struct { int i;
                    any[] a; /* { dg-error "" } */
                  };
